removing wip elements from repo

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ ga_analytics: UA-59340680-3
 # Specify the author for blog posts
 author:
   name: Elliott Brichford
-  url: https://twitter.com/essentialenemy
+  url: https://elliottbrichford.com
   email: elliott@elliottbrichford.com
 
 # Custom vars
